# fmp_dvc

./: .gitmodules  README.md  dice.json  dvc.yaml  last.pth  params.yaml  pyproject.toml  scores.json  train_seg.py  train_seg_optuna.py
.dvc/: config
result/: .gitignore  dice.json  scores.json
seg_data/: CamVid.dvc
