[tool.poetry]
name = "quickstart"
version = "0.1.0"
description = ""
authors = ["hiroki <1234defgsigeru@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7,<3.9"
farmer-pytorch = {path = "farmer.pytorch", develop = true}
albumentations = "^1.0.3"
opencv-python = "^4.5.3"
segmentation-models-pytorch = {git = "https://github.com/qubvel/segmentation_models.pytorch.git"}
dvc = "^2.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
