[tool.poetry]
name = "quickstart"
version = "0.1.0"
description = ""
authors = ["hiroki <1234defgsigeru@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
farmer-pytorch = {path = "farmer.pytorch", develop = true}
segmentation-models-pytorch = {git = "https://github.com/qubvel/segmentation_models.pytorch.git"}
albumentations = "^1.1.0"
opencv-python = "^4.5.5"
dvc = "^2.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
